feat: integrate H2 database and finalize domain model
- integrated H2 database and aligned schema with application model
- introduced DTOs for film creation and validation
- implemented MPA and Genre as first-class domain entities
- completed business logic for films, users, likes, and friendships
- stabilized internal testing and ensured all tests pass